tests/snapshots/payload__golden_payload_with_a_lifetime_and_an_led.snap
---
source: tests/payload.rs
expression: "stdout(&[\"--dry-run\", \"text\", \"--timeout\", \"30\", \"--led\", \"red\", \"--priority\",\n\"urgent\", \"deploy done\",])"
---
{
  "application_name": "busy",
  "priority": 100,
  "led_notification_color": "#FF0000FF",
  "elements": [
    {
      "id": "message",
      "timeout": 30,
      "x": 36,
      "y": 8,
      "display": "front",
      "align": "center",
      "type": "text",
      "text": "deploy done",
      "font": "large",
      "color": "#FFFFFFFF"
    }
  ]
}
